--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 
 
     <!--  div for basic img  -->
-    <div class="text-img">
+<!--     <div class="text-img">
         <h3 class="op">plan your first trip with us</h3>
     </div>
-   
+    -->
      
     <div class="terminal-loader">
       <div class="terminal-header">
